# who_is_the_best

./: Makefile  README.md  db_connecnt.py  main.py  pyproject.toml
static/: arina_the_best.css  nur_stile.css  style.css
templates/: arina_the_best.html  index.html  nur_the_best.html
