[tool.poetry]
name = "arina"
version = "0.1.0"
description = ""
authors = ["Nurlan-Aliev <nualiev612@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.114.0"}
jinja2 = "^3.1.4"
redis = {extras = ["hiredis"], version = "^5.0.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
